STM32_LedBlink/.metadata/.plugins/org.eclipse.cdt.ui/LedBlink.build.log
16:13:57 **** Incremental Build of configuration Debug for project LedBlink ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:14: error: expected ';' before '}' token
  106 |    GPIOA->IDR  //16bitë¡œ ì?½ì–´ëƒ„
      |              ^
      |              ;
  107 |   }
      |   ~           
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:13:58 Build Failed. 2 errors, 0 warnings. (took 738ms)

